[tool.poetry]
name = "pgc2"
version = "0.1.0"
description = ""
authors = ["dave <dave@cyllective.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.15"
python-dotenv = "^1.0.0"
SQLAlchemy-Utils = "^0.41.1"
psycopg = {extras = ["binary"], version = "^3.1.9"}
pydantic = "^1.10.7"
tenacity = "^8.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
